--- a/maplus/maplus/template/css/layout.css
+++ b/maplus/maplus/template/css/layout.css
@@ -35,7 +35,9 @@ body,input,select,textarea{color:#000;}
 .contents{
     padding:10px 11px;
 }
-
+.contents_top{
+    padding:30px 11px 10px;
+}
 
 /*リンク
 --------------------------------------------------------------------------------*/
@@ -118,3 +120,25 @@ input[type="text"]{
     -webkit-border-radius: 3px;
     font-weight:bold;
 }
+
+header{
+	text-align: center;
+	width: 100%;
+	height: 40px;
+    background: #eee;  
+    border: 1px solid #CCC;  
+    color: #333;  
+    position: fixed;  
+    top:0;  
+    left:0; 
+    margin-bottom: 100px;
+}
+header div:nth-child(3){
+	border-left: 1px solid #CCC;
+
+}
+
+
+
+
+
