--- a/cocolink/cocolink/template/css/layout.css
+++ b/cocolink/cocolink/template/css/layout.css
@@ -133,7 +133,7 @@ header{
     left:0; 
     margin-bottom: 100px;
 }
-header div:nth-child(3){
+header .right_bx{
 	border-left: 1px solid #CCC;
 
 }
