--- a/cocolink/cocolink/template/html/input_profile.html
+++ b/cocolink/cocolink/template/html/input_profile.html
@@ -1,5 +1,6 @@
 <html lang="ja" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml">
 <html lang="ja" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml">
+<html lang="ja" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml">
 <head>
 <meta charset="utf-8">
 <meta name="author" content="© 2012 GIRLS UP">
