--- a/cocolink/cocolink/template/html/input_user.html
+++ b/cocolink/cocolink/template/html/input_user.html
@@ -1,5 +1,6 @@
 <html lang="ja" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml">
 <html lang="ja" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml">
+<html lang="ja" prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/fbml">
 <head>
 <meta charset="utf-8">
 <meta name="author" content="© 2012 GIRLS UP">
@@ -18,43 +19,63 @@
 
 <header class="tbl">
 	<div class="tbl-cell w60 left_bx"></div>
-	<div class="tbl-cell canter_bx">会員登録</div>
-	<div class="tbl-cell w60 right_bx"> 登録</div>
+	<div class="tbl-cell canter_bx">ココリンク</div>
+	<div class="tbl-cell w60 right_bx js-submit">登録</div>
 </header>	
 
-
-<section class="contents input_user_bx">
-	<h1 class="taCenter text15">会員登録</h1>
-	<form method="POST" action="confirm_user.html" class="mt20">
-		<p class="mt20 text10">※下記の項目は会員登録後も変更可能です。</p>
+<section class="contents_top">
+	<form id = "form1" method="POST" action="feed.html" class="mt20">
+		<span class="error" id="js-form-error">※ユーザー名とパスワードが一致しません</span>
 		<div class="mt10">
 			<div class="text12 fw_bld">
 				ユーザー名
-				<span class="error">※エラーメッセージ</span>
+				<span class="error js-error" id="js-user-name-error"></span>
 			</div> 
-			<input type="text" name="user_name" maxlength="16" value="">
+			<input type="text" name="user_name" id="js-user-name" maxlength="16" value="">
+		</div>
+		<div class="mt10">
+			<div class="text12 fw_bld">
+				ニックネーム
+				<span class="error js-error" id="js-nick-name-error"></span>
+			</div> 
+			<input type="text" name="nick_name" id="js-nick-name"  maxlength="16" value="">
 		</div>
 		<div class="mt10">
 			<div class="text12 fw_bld">
 				パスワード
-				<span class="error">※エラーメッセージ</span>
+				<span class="error js-error" id="js-password-error"></span>
 			</div> 
-			<input type="text" name="password" maxlength="16" value="">
+			<input type="password" name="password" id="js-password"  maxlength="16" value="">
+		</div>
+		<div class="mt10">
+			<div class="text12 fw_bld">
+				パスワード確認
+				<span class="error js-error" id="js-password-error"></span>
+			</div> 
+			<input type="password" name="password" id="js-password"  maxlength="16" value="">
 		</div>
 	</form>
-	<a href="login.htm" class="mt10 floRight tx_underline">ログイン</a>
-
 <section>
+<a href="sign_in.html" class="mt10 floRight tx_underline">ログイン</a>
 
 
-<script type="text/javascript" src="../js/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="../js/common/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="../js/plugin/jquery.lazyload.min.js"></script>
 <script type="text/javascript" src="../js/plugin/jquery.autoResize.min.js"></script>
-<script type="text/javascript" src="../js/general.js"></script>
-<script type="text/javascript" src="../js/ajax_common.js"></script>
+<script type="text/javascript" src="../js/common//general.js"></script>
+<script type="text/javascript" src="../js/common/ajax_common.js"></script>
 
 
 <script type="text/javascript" src="../js/lib/plus.js"></script>
-<script type="text/javascript" src="../js/feed.js"></script>
+<script type="text/javascript" src="../js/input_user.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
