テンプレート追加

--- a/cocolink/cocolink/template/html/sign_up.html
+++ b/cocolink/cocolink/template/html/sign_up.html
@@ -36,6 +36,11 @@
 			<input type="text" name="nick_name" id="js-nick-name"  maxlength="10" value="">
 		</div>
 		<div class="mt10">
+			<p class="text12 fw_bld">メールアドレス</p> 
+			<p class="error js-error" id="js-email-error"></p>
+			<input type="email" name="email" id="js-email"  maxlength="20" value="">
+		</div>
+		<div class="mt10">
 			<p class="text12 fw_bld">パスワード(6〜16文字の英数字)</p>
 			<p class="error js-error" id="js-password-error"></p>
 			<input type="password" name="password" id="js-password"  maxlength="16" value="">
