テンプレート追加

--- a/cocolink/cocolink/template/html/profile.html
+++ b/cocolink/cocolink/template/html/profile.html
@@ -24,27 +24,17 @@
 </header>	
 
 <section class="contents_top">
-	<form id = "form1" method="POST" action="feed.html" class="mt20">
-		<p class="error fw_bld" id="js-form-error">※メールアドレスとパスワードが一致しません</p>
-		<div class="mt10 fw_bld">
-			<p class="text12 fw_bld">メールアドレス</p> 
-			<p class="error js-error" id="js-email-error"></p>
-			<input type="email" name="email" id="js-email"  maxlength="100" value="" class="w100p">
-		</div>
-		<div class="mt10 fw_bld">
-			<p class="text12">パスワード</p>
-			<p class="error js-error" id="js-password-error"></p> 
-			<input type="password" name="password" id="js-password"  maxlength="16" value="" class="w100p">
-		</div>
-		<button type="botton"class="js-submit btn bg_col_999 mt20">ログイン</button>
+	<div class="mt10">
+		<p class="text12 fw_bld">ニックネーム</p> 
+		<p class="">山田太郎</p>
+	</div>
+		<div class="mt10">
+		<p class="text12 fw_bld">生年月日</p> 
+		<p class="">1985年7月1日</p>
+	</div>
+	<a href="input_profile.html" class="mt10 floRight tx_underline text11">編集する</a>
 
-	</form>
-	<div class="taRight mt10">
-		<a href="sign_up.html" class="mt10 tx_underline">新規での会員登録はこちら→</a>
-	</div>
-	<div class="taRight mt10">
-		<a href="mailto:user@dammy.com?body=このまま送信してください。" class="mt10 tx_underline">パスワードをお忘れの方はこちら→</a>
-	</div>
+
 <section>
 
 
@@ -56,6 +46,7 @@
 
 
 <script type="text/javascript" src="../js/lib/plus.js"></script>
-<script type="text/javascript" src="../js/sign_in.js"></script>
+<script type="text/javascript" src="../js/input_profile.js"></script>
 </body>
 </html>
+
