--- a/cocolink/cocolink/template/html/sign_up.html
+++ b/cocolink/cocolink/template/html/sign_up.html
@@ -20,36 +20,32 @@
 <header class="tbl">
 	<div class="tbl-cell w60 left_bx"></div>
 	<div class="tbl-cell canter_bx">ココリンク</div>
-	<div class="tbl-cell w60 right_bx js-submit">登録</div>
+	<div class="tbl-cell w60"></div>
 </header>	
 
 <section class="contents_top">
 	<form id = "form1" method="POST" action="feed.html" class="mt20">
-		<div class="mt10">
-			<p class="text12 fw_bld">ユーザー名(6〜16文字)</p>
-			<p class="error js-error" id="js-user-name-error"></p> 
-			<input type="text" name="user_name" id="js-user-name" maxlength="16" value="">
-		</div>
-		<div class="mt10">
-			<p class="text12 fw_bld">ニックネーム(1〜10文字)</p> 
+		<div class="mt10 fw_bld">
+			<p class="text12 ">ニックネーム(1〜10文字)</p> 
 			<p class="error js-error" id="js-nick-name-error"></p>
-			<input type="text" name="nick_name" id="js-nick-name"  maxlength="10" value="">
+			<input type="text" name="nick_name" id="js-nick-name"  maxlength="100" value="">
 		</div>
-		<div class="mt10">
-			<p class="text12 fw_bld">メールアドレス</p> 
+		<div class="mt10 fw_bld">
+			<p class="text12">メールアドレス</p> 
 			<p class="error js-error" id="js-email-error"></p>
-			<input type="email" name="email" id="js-email"  maxlength="20" value="">
+			<input type="email" name="email" id="js-email"  maxlength="20" value="" class="w100p">
 		</div>
-		<div class="mt10">
-			<p class="text12 fw_bld">パスワード(6〜16文字の英数字)</p>
-			<p class="error js-error" id="js-password-error"></p>
-			<input type="password" name="password" id="js-password"  maxlength="16" value="">
-		</div>
-		<div class="mt10">
-			<p class="text12 fw_bld">パスワード確認</p> 
+		<div class="mt10 fw_bld">
+			<p class="text12">パスワード</p>
+			<p class="error js-error" id="js-password-error"></p> 
+			<input type="password" name="password" id="js-password"  maxlength="16" value="" class="w100p">
+		</div> 
+		<div class="mt10 fw_bld">
+			<p class="text12">パスワード確認</p> 
 			<p class="error js-error" id="js-con-password-error"></p>
-			<input type="password" name="con_password" id="js-con-password"  maxlength="16" value="">
+			<input type="password" name="con_password" id="js-con-password"  maxlength="16" value="" class="w100p">
 		</div>
+		<button type="botton"class="js-submit btn bg_col_999 mt20">登録</button>
 	</form>
 <section>
 <a href="sign_in.html" class="mt10 floRight tx_underline">ログイン</a>
