--- a/cocolink/cocolink/template/html/input_profile.html
+++ b/cocolink/cocolink/template/html/input_profile.html
@@ -226,6 +226,13 @@
 <script type="text/javascript" src="../js/common/jquery-1.8.2.min.js"></script>
 <script type="text/javascript" src="../js/plugin/jquery.lazyload.min.js"></script>
 <script type="text/javascript" src="../js/plugin/jquery.autoResize.min.js"></script>
+
+<script src="../js/lib/json2.js"></script>
+<script src="../js/lib/underscore.js"></script>
+<script src="../js/lib/backbone.js"></script>
+
+
+
 <script type="text/javascript" src="../js/common//general.js"></script>
 <script type="text/javascript" src="../js/common/ajax_common.js"></script>
 
