--- a/cocolink/cocolink/template/html/post.html
+++ b/cocolink/cocolink/template/html/post.html
@@ -7,9 +7,9 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="format-detection" content="telephone=no">
 <title>maplus</title>
-<link rel="stylesheet" href="../css/general.css"/>
-<link rel="stylesheet" href="../css/layout.css"/>
-<link rel="stylesheet" href="../css/module.css"/>
+<link rel="stylesheet" href="/static/css/general.css"/>
+<link rel="stylesheet" href="/static/css/layout.css"/>
+<link rel="stylesheet" href="/static/css/module.css"/>
 <title>maplus</title>
 </head>
 <body>
@@ -83,15 +83,15 @@
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&region=ja"></script>
 
-<script type="text/javascript" src="../js/common/jquery-1.8.2.min.js"></script>
-<script type="text/javascript" src="../js/common/general.js"></script>
-<script type="text/javascript" src="../js/common/ajax_common.js"></script>
+<script type="text/javascript" src="/static/js/common/jquery-1.8.2.min.js"></script>
+<script type="text/javascript" src="/static/js/common/general.js"></script>
+<script type="text/javascript" src="/static/js/common/ajax_common.js"></script>
 
-<script type="text/javascript" src="../js/plugin/jquery.lazyload.min.js"></script>
-<script type="text/javascript" src="../js/plugin/jquery.autoResize.min.js"></script>
+<script type="text/javascript" src="/static/js/plugin/jquery.lazyload.min.js"></script>
+<script type="text/javascript" src="/static/js/plugin/jquery.autoResize.min.js"></script>
 
-<script type="text/javascript" src="../js/lib/map_com.js"></script>
-<script type="text/javascript" src="../js/post.js"></script>
+<script type="text/javascript" src="/static/js/lib/map_com.js"></script>
+<script type="text/javascript" src="/static/js/post.js"></script>
 
 
 <script type="text/template" id="template">
