--- a/cocolink/cocolink/static/css/module.css
+++ b/cocolink/cocolink/static/css/module.css
@@ -5,7 +5,6 @@
 .post_images{
 	margin: 0 -18px;
 	-webkit-box-shadow: 0px 3px 3px rgba(0,0,0,0.3);
-    -moz-box-shadow:0px 3px 3px rgba(0,0,0,0.3);
 }
 
 .btn_min{
@@ -17,4 +16,8 @@
 	width: 30px;
 	border: 1px solid #999;
 	background: #eee
+}
+.icon{
+    width: 30px;
+    height:30px;
 }
