--- a/cocolink/cocolink/template/html/post.html
+++ b/cocolink/cocolink/template/html/post.html
@@ -10,77 +10,130 @@
 <link rel="stylesheet" href="/static/css/general.css"/>
 <link rel="stylesheet" href="/static/css/layout.css"/>
 <link rel="stylesheet" href="/static/css/module.css"/>
+<link rel="stylesheet" href="/static/css/font-awesome.css">
+<link rel="stylesheet" href="/static/css/bootstrap.css" media="screen">
 <title></title>
 </head>
 <body>
     {% csrf_token %}
 
+<!-- header 
 <header class="tbl">
-    <div class="tbl-cell w60 left_bx"></div>
-    <div class="tbl-cell canter_bx">投稿する</div>
-    <div class="tbl-cell w60"></div>
-</header>   
-
-<article class="contents_top">
-
-
-        <h1>カテゴリー</h1>
-        <select name="category" id='category'>
-
-            <option value="">全て</option>
-            <option value="store">お店</option>
-            <option value="food">食事</option>
-            <option value="cafe">カフェ</option>
-            <option value="bus_station">バス停</option>
-            <option value="gym">ジム</option>
-
-        </select>
+    <a href="../feed"class="tbl-cell w33p left_bx">
+        <span class="icon-header-arrow-l"></span>
+        <img src="/static/images/logo.gif" class="img-header-logo ml30">
+    </a>
+    <div class="tbl-cell w33p canter_bx"></div>
+    <div class="tbl-cell w33p"></div>
+</header>
+!-->
 
 
-    <div class="contents map_page disp_block">
+<header class="tbl clrF">
+    <a href="../feed"class="tbl-cell w33p left_bx">
+        <img src="/static/images/logo.gif" class="img-header-logo ">
+    </a>
+    <div class="tbl-cell w33p canter_bx"></div>
+    <div class="tbl-cell w33p"></div>
+</header>
+
+<nav class="g-nav">
+    <ul>
+    <li class="tbl-cell g-nav-cell"><a href="feed"><i class="fa fa-align-left fa-size-min fa-col-white"></i></a></li>
+    <li class="tbl-cell g-nav-cell"><a href="feed"><i class="fa fa-search-plus fa-size-min fa-col-white"></i></a></li>
+    <li class="tbl-cell g-nav-cell"><a href=""><i class="fa fa-pencil-square-o fa-size-min  fa-col-white"></i></a></li>
+    <li class="tbl-cell g-nav-cell"><a href=""><i class="fa fa-col-white fa-size-min fa-user"></i></a></li>
+    </ul>
+</nav>
+
+<article class="contents-top">
+
+  <!-- map !-->
+  <section class="map-bx">
+      <div id="map_canvas" class="map-bx-map"></div>
+
+      <div class="map-bx-btn">
+          <button type="botton"class="js-dsp-zip-input-bx map-bx-jump-btn">
+              <i class="fa fa-location-arrow fa-size-s fa-col-gray"></i>
+          </button>
+          <button type="botton"class="js-current map-bx-refresh-btn">
+              <i class="fa fa-refresh fa-size-s fa-col-gray"></i>
+          </button>
+      </div>
+  </section>
 
 
-        
-        <input type="text" name="query" id="js-geocoding-input"  maxlength="100" value="" class="w100p" placeholder="ここに入力した住所へジャンプ">
-        <button type="botton"class="js-geocoding btn bg_col_999 mt10">ジャンプ</button>
-        <br/>
-        
-        <button type="botton"class="js-search btn bg_col_999 mt10">検索</button>
+
+  <section class="main mt10">
+    <!-- 1p start !-->
+    <section class="map_page js-map-page disp_block">
+
+         <section class="js-zip-input-bx mt5 mb10 disp_none">
+            <div class="input-group">
+                <input type="text" class="form-control" name="query" id="js-geocoding-input"  maxlength="100" placeholder="例）渋谷、新宿">
+                <span class="input-group-btn">
+                    <button class="btn btn-default js-geocoding" type="button">移動</button>
+                </span>
+            </div>
+        </section>
+
+        <p>
+            <i class="fa fa fa-thumb-tack fa-size-s fa-col-gray mr5"></i><span class="js-place-text place-text"></span>
+        </p>
+            
+
+        <!-- 入力-カテゴリ start !-->       
+        <div class="form-group mt10">   
+            <select name="category" class="form-control" id="category">
+                <option value="">カテゴリを選択</option>
+                <option value="store">お店</option>
+                <option value="food">食事</option>
+                <option value="cafe">カフェ</option>
+                <option value="bus_station">バス停</option>
+                <option value="gym">ジム</option>
+            </select>
+        </div>
 
 
-        <div id="map_canvas" style="width:100%; height:200px" class="mt10"></div>
+  
+        <!-- 次へボタン !-->
+        <div class="bs-example">
+          <ul class="pager">
+            <li class="next js-dsp-category-input-bx"><span>一覧から探す →</span></li>
+          </ul>
+        </div>
 
 
-       <button type="botton"class="js-current btn bg_col_999 mt10">現在地に戻る</button>
+         <div class="js-select-place-bx disp_none bd-btm">
+            <ul class="js-select-place mb10"></ul>
 
-      <div class="js-current-post2 btn bg_col_999 mt10">現在地から投稿</div>
+            <!-- 送信用!-->
+            <input type="hidden" name="" value="" class="js-subumit-lng">
+            <input type="hidden" name="" value="" class="js-subumit-reference">
+            <input type="hidden" name="" value="" class="js-subumit-lat">
+            <!-- 送信用!-->
+        </div>
 
-        クリックした地図:<p class="js-place-text"></p>
-        <h1>検索結果</h1>
-        <ul id="js-result-list" class="dsp_txt_page ullist mt10"></ul>
-    </div>
 
-    <div class="contents txt_page disp_none">
-        <div class="dsp_map_page">戻る</div>
+        <form action="http://127.0.0.1:8080/ajax_post/" method="post">
+  
+            <section class="m10">
+                <textarea id="js-message" name="message" class="input-message" maxlength="140" placeholder="投稿文を入力...(最大140文字)"></textarea>
+            </section>
+            <p class="bd-btm"></p>
 
-    	<form action="http://127.0.0.1:8080/ajax_post/" method="post">
-    	    <section class="m10">
-    	        <textarea id="js-message" name="message" class="p10 minH125" maxlength="140" placeholder="書き込み..."></textarea>
-    	        <div id="js-comment_counter" class="counter">140</div>
-    	    </section>
+            <!--入力-ファイル start -->
+            <div class="mt10">
+               <input type="file" id="files" name="files[]" multiple class="disp_none mt10"/>
+               <output id="list" class=""></output>
+               <img class="js-disp-img disp_img">
+               <input type="hidden" name="data_url" value="" class="js-post-data-url">
+            </div>
+            <!--入力-ファイル end -->
 
-            <div class="dsp_place">
-                <p class="place"></p>
-
-<!-- 送信用!-->
-<input type="hidden" name="" value="" class="js-subumit-lng">
-<input type="hidden" name="" value="" class="js-subumit-reference">
-<input type="hidden" name="" value="" class="js-subumit-lat">
-<!-- 送信用!-->
-
-    		</div>
-            <input type="checkbox" name="public_flg" value="1" class="js-public-flg">公開する<br>
-            <input type="checkbox" name="review_flg" value="1" class="js-review-flg">評価する
+            <!--
+            <input type="checkbox" name="public_flg" value="1" class="js-public-flg"> &nbsp;公開する<br>
+            <input type="checkbox" name="review_flg" value="1" class="js-review-flg"> &nbsp;評価する
 
             <div class="star_review">
                 <div class="starlevel5 star00"></div>
@@ -92,20 +145,45 @@
                     <li class="js_star" id="star_50"></li>
                 </ul>
             </div>
+            -->
 
-    	    <!--start  data url -->
-    	    <div class="m10 mt20">
-    	       <input type="file" id="files" name="files[]" multiple class="disp_none"/>
-    	       <output id="list" class=""></output>
-    	       <img class="js-disp-img disp_img">
-    	       <input type="hidden" name="data_url" value="" class="js-post-data-url">
-    	    </div>
-    	    <!--end  data url -->
-    	</form>
 
-        <button type="botton"class="js-submit btn bg_col_999 mt10">投稿する</button>
+        </form>
 
-    </div>
+
+       <!-- 投稿ボタン !-->
+        <button type="button" class="js-submit mt10 btn btn-success btn-lg btn-block">投稿する</button>
+
+        
+      </section>
+      <!-- 1p end !-->
+
+
+
+
+      <!-- 入力-一覧検索画面 start !-->
+      <section class="js-list-pege mt5 disp_none">
+
+          <!-- 前へボタン !-->
+          <p class="js−dsp_map_page"><i class="fa fa-reply fa-size-s"></i></span>
+
+          <div class="mt10 input-group">
+              <input type="text" class="form-control" name="query" id="js-q-input"  maxlength="100" placeholder="キーワードを入力...">
+                  <span class="input-group-btn">
+                  <button class="btn btn-default js-search" type="button"><i class="fa fa-search-plus fa-size-s fa-col-white"></i></button>
+              </span>
+          </div>
+         
+          <div class="js-result-list-bx">
+              <ul class="js-result-list result-list dsp_txt_page ullist mt10 "></ul>
+              <div class="js-more-btn-bx disp_none">  
+                  <button type="button" class="js-more-btn mt10 btn btn btn-warning btn-lg btn-block">もっとみる</button>
+              </div>
+          </div>
+      </section>
+      <!-- 入力-一覧検索画面 end !-->
+
+    </section>
 
 </article>
 
@@ -127,24 +205,20 @@
 
 
 <script type="text/template" id="template">
-<li class="p5">
+<li class="arrow">
 <div class="media">
     <div class="img">
-        <span>{index}</span>
-        <img src="{icon}" class="icon">
+        <span class="mr10">{index}</span>
+        <img src="{icon}" class="g-icon">
     </div> 
-    <div class="bd">
+    <div class="bd js-result-list-main">
         <p>{name}</p>
         <p class="text10 text_col_gray">{vicinity}</p>
     </div>
 <input type="hidden" name="" value="{lng}" class="js-lng">
 <input type="hidden" name="" value="{reference}" class="js-reference">
 <input type="hidden" name="" value="{lat}" class="js-lat">
-<input type="hidden" name="" value="{lng}" class="js-lng">
 </div>
-
-
-
 
 </li>
 </script>
